tests/baselines/reference/binaryArithmatic2.errors.txt
binaryArithmatic2.ts(1,13): error TS18050: The value 'undefined' cannot be used here.


==== binaryArithmatic2.ts (1 errors) ====
    var v = 4 | undefined;
                ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.